--- a/style.css
+++ b/style.css
@@ -1,3 +1,41 @@
+* {
+  box-sizing: border-box;
+}
 body {
-  background-color: aqua;
+  background-color: lightgray;
+  position: relative;
+}
+.header {
+  width: 850px;
+  height: 250px;
+  background-color: linen;
+  margin: auto;
+}
+.profilepic {
+  width: 150px;
+  height: 150px;
+  background-color: lightpink;
+  position: absolute;
+  top: 100px;
+  left: 250px;
+  border: 2px solid black;
+}
+.sitename {
+  font-size: 10px;
+  font-family: cursive;
+  position: absolute;
+  top: 125px;
+  left: 425px;
+  border: 1px solid black;
+  background-color: ghostwhite;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+.navmenu {
+  position: absolute;
+  left: 700px;
+  top: 190px;
+}
+.column {
+  float: left;
 }
