--- a/style.css
+++ b/style.css
@@ -8,34 +8,114 @@ body {
 .header {
   width: 850px;
   height: 250px;
-  background-color: linen;
+  background-color: ivory;
   margin: auto;
 }
 .profilepic {
   width: 150px;
   height: 150px;
-  background-color: lightpink;
+  background-color: bisque;
   position: absolute;
-  top: 100px;
+  top: 140px;
   left: 250px;
   border: 2px solid black;
+  z-index: 1;
 }
 .sitename {
   font-size: 10px;
   font-family: cursive;
   position: absolute;
-  top: 125px;
+  top: 150px;
   left: 425px;
-  border: 1px solid black;
-  background-color: ghostwhite;
   padding-left: 5px;
   padding-right: 5px;
+  z-index: 1;
+}
+.likebuttons {
+  position: absolute;
+  top: 210px;
+  left: 650px;
 }
 .navmenu {
   position: absolute;
-  left: 700px;
-  top: 225px;
+  display: block;
+  background-color: grey;
+  width: 850px;
+  float: left;
+  top: 240px;
+  padding-left: 620px;
+  padding-top: 5px;
+  height: 30px;
+  text-align: center;
+  border: 1px solid black;
+}
+
+a {
+  padding-right: 1px;
+  background-color: lightgoldenrodyellow;
+}
+a:link {
+  text-decoration: none;
+  padding: 5px 4px 5px 4px;
+  margin-top: 1px;
+  border: 1px solid grey;
+}
+.row {
+  position: relative;
+  margin: auto;
 }
 .column {
+  width: 850px;
+  height: 500px;
+  position: relative;
+}
+.left {
+  width: 328px;
+  position: absolute;
+  top: 275px;
+  text-align: center;
+}
+.right {
+  width: 512px;
+  position: absolute;
+  top: 275px;
+  left: 338px;
+  text-align: center;
+  border: 1px solid black;
+}
+.leftside {
+  border: 1px solid black;
+  margin-right: 2px;
+  margin-left: 2px;
+  height: 420px;
+  text-align: left;
+}
+.rightside {
+  border: 1px solid black;
+  margin-right: 2px;
+  margin-left: 2px;
+  height: 420px;
+  text-align: left;
+}
+.leftside img {
+  border-radius: 50%;
   float: left;
+  margin-right: 10px;
+}
+.rightside img {
+  float: left;
+  margin-right: 10px;
+}
+h2 {
+  background-color: darkgrey;
+  text-align: center;
+  border: 1px solid black;
+}
+.copyright {
+  background-color: lightgoldenrodyellow;
+  text-align: center;
+}
+.coffee {
+  text-shadow: 1px 1px 4px red;
+  text-align: center;
 }
